<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/person_gender_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/other_gender"
        android:padding = "@dimen/margin_8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/person_gender_man_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_8dp"
        android:background="@drawable/button_selector"
        android:text="@string/man"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/person_gender_text" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/person_gender_woman_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_8dp"
        android:background="@drawable/button_selector"
        android:text="@string/woman"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/person_gender_man_button" />

    <TextView
        android:id="@+id/person_age_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_32dp"
        android:padding="@dimen/margin_8dp"
        android:text="@string/other_person_age"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/person_gender_woman_button" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/person_18_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_8dp"
        android:background="@drawable/button_selector"
        android:text="@string/less_than_18"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/person_age_text" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/person_age_18_25_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_8dp"
        android:background="@drawable/button_selector"
        android:text="@string/age_18_25"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/person_18_button" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/person_age_25_35_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_8dp"
        android:background="@drawable/button_selector"
        android:text="@string/age_25_35"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/person_age_18_25_button" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/person_age_bigger_35_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_8dp"
        android:background="@drawable/button_selector"
        android:text="@string/age_bigger_35"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/person_age_25_35_button" />


</androidx.constraintlayout.widget.ConstraintLayout>
